--- a/src/Componets/Card/Card.module.css
+++ b/src/Componets/Card/Card.module.css
@@ -1,5 +1,10 @@
 .card{
-    background: black;
+    background: yellow;
     box-shadow:  0 2px 8px  rgba(0, 0, 0, 0.26);
     border-radius: 10px;
+    width: 30%;
+    height: 200px;
+    margin: auto;
+    margin-top: 300px
+
 }
