--- a/src/Componets/Card/Card.module.css
+++ b/src/Componets/Card/Card.module.css
@@ -2,21 +2,11 @@
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
-    background-color: white;
+    background:#000;
     width: fit-content;
-    background-color: yellow;
     margin: auto;
     margin-top: 200px;
     height: fit-content;
   }
-  @media screen and(max-width:1024px){
-      .card{
-          width: 100%;
-      }
-  }
-  @media screen and(max-width:550px){
-    .card{
-        width: inherit;
-    }
-}
+ 
   
