--- a/src/Componets/Adduser/Adduser.module.css
+++ b/src/Componets/Adduser/Adduser.module.css
@@ -16,13 +16,52 @@
 }
 .link{
     display: flex;
-    flex-direction: row;gap: 100px
+    flex-direction: row;gap: 120px
 }
 .links{
     display: flex;
     flex-direction: row;
     gap: 5px
    
+}
+.contenttext {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-left: 50px;
+    color: gray;
+    font-family: sans-serif;
+    font-size: 14px;
+    gap: 50px
+
+}
+.para {
+    padding-top: 50px;
+    padding-bottom: 20px
+}
+.paragh{
+    line-height: 1.625;
+    padding-bottom: 50px
+}
+.lin{
+    color: blue;
+}
+.site{
+    color: gray;
+    font-size: 14px;
+
+}
+.btn{
+    color: gray;
+    font-size: 14px;
+}
+.button{
+    background: gray;
+    width: 18px;
+    height: 18px;
+    border: none;
+    border-radius: 2px;
 }
 
   
