--- a/src/Componets/Button/Button.module.css
+++ b/src/Componets/Button/Button.module.css
@@ -1,10 +1,11 @@
 .btn {
-    width: 320px;
+    width: 280px;
     background:red;
     border: none;
     border-radius: 5px;
     height: 50px;
     color: white;
     font-family: sans-serif;
-    font-size: 17px
+    font-size: 17px;
+    
 }
