--- a/src/Componets/Card/Card.module.css
+++ b/src/Componets/Card/Card.module.css
@@ -2,11 +2,11 @@
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
-    background:#000;
     width: fit-content;
     margin: auto;
     margin-top: 100px;
     height: fit-content;
+    background:rgba(0,0,0,.75);    
   }
  
   
