--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@ body {
   color: white
 
 }
+body:after{
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:-1;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,.60);
+  box-shadow:inset 0 0 20px #000,
+}
