--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  color: white
+  color: white;
+ 
 
 }
 body:after{
@@ -23,7 +24,7 @@ body:after{
   left:0;
   z-index:-1;
   width:100%;
-  height:100%;
+  height:870px;
   background:rgba(0,0,0,.60);
   box-shadow:inset 0 0 20px #000,
 }
