--- a/src/Componets/Footer/Footer.module.css
+++ b/src/Componets/Footer/Footer.module.css
@@ -6,3 +6,22 @@
 
     
 }
+.content{
+    display: flex;
+    flex-direction: row;
+    gap: 200px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    font-family: sans-serif;
+    font-size: 14px;
+    color: gray
+
+}
+.foo {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+}
