--- a/src/Componets/Footer/Footer.module.css
+++ b/src/Componets/Footer/Footer.module.css
@@ -3,8 +3,11 @@
     background:rgba(0,0,0,0.75);
     margin-top: 30px;
     
-
-    
+}
+@media screen and (max-width:1500px){
+    .footer{
+        background: black
+    }
 }
 .content{
     display: flex;
@@ -18,6 +21,15 @@
     font-size: 14px;
     color: gray
 
+}
+@media screen and (max-width:700px){
+    .content{
+        flex-direction: column;
+        gap: 50px;
+        justify-content: center;
+        align-items: center;
+
+    }
 }
 .foo {
     display: flex;
