--- a/src/Componets/Adduser/Adduser.module.css
+++ b/src/Componets/Adduser/Adduser.module.css
@@ -79,7 +79,7 @@
     color: white;
     height: 50px;
     border-radius: 5px;
-    width: 100%;
+    width: 300px;
    padding: 20px;
    font-size: 15px;
    background-color: rgb(59, 59, 59);
@@ -96,6 +96,14 @@
       font-size: 30px;
       padding-top: 20px;
       padding-bottom: 20px
+  }
+  .textVaild{
+      border: none;
+      border-bottom: 2px solid goldenrod;
+      color: goldenrod;
+      font-family: sans-serif;
+      font-size: 14px;
+      padding-bottom: 10px
   }
  
   
