--- a/src/Componets/Adduser/Adduser.module.css
+++ b/src/Componets/Adduser/Adduser.module.css
@@ -99,11 +99,20 @@
   }
   .textVaild{
       border: none;
-      border-bottom: 2px solid goldenrod;
-      color: goldenrod;
+      border-bottom: 2px solid #e87c03;
+      color: #e87c03;
       font-family: sans-serif;
       font-size: 14px;
       padding-bottom: 10px
+  }
+  .textVaildPassword{
+    border: none;
+    border-bottom: 2px solid #e87c03;
+    color: #e87c03;
+    font-family: sans-serif;
+    font-size: 14px;
+    padding-bottom: 10px
+
   }
  
   
